After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 679343 - [auto*sink] Playbin's av-offset not working
[auto*sink] Playbin's av-offset not working
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
0.10.x
Other Linux
: Normal normal
: 0.11.x
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-07-03 18:35 UTC by Bastien Nocera
Modified: 2012-07-10 12:39 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Bastien Nocera 2012-07-03 18:35:31 UTC
Because autoaudiosink and autovideosink don't proxy the ts-offset properties.
Similar bug to bug 679341 in autocluttersink.
Comment 1 Wim Taymans 2012-07-10 12:39:28 UTC
commit ab77c424be50782f3cba9b1f36659f6b66e06098
Author: Wim Taymans <wim.taymans@collabora.co.uk>
Date:   Tue Jul 10 14:38:21 2012 +0200

    autodetect: proxy ts-offset properties
    
    Proxy the ts-offset property in the audio*sink elements.
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=679343