gst/autodetect/gstautoaudiosink.h
@@ -44,6 +44,7 @@ typedef struct _GstAutoAudioSink {
   GstPad *pad;
   GstElement *kid;
   GstCaps *filter_caps;
+  GstClockTimeDiff ts_offset;
 } GstAutoAudioSink;
 
 typedef struct _GstAutoAudioSinkClass {
