gst/autodetect/gstautovideosink.h
@@ -44,6 +44,7 @@ typedef struct _GstAutoVideoSink {
   GstPad *pad;
   GstElement *kid;
   GstCaps *filter_caps;
+  GstClockTimeDiff ts_offset;
 } GstAutoVideoSink;
 
 typedef struct _GstAutoVideoSinkClass {
